<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">USTH Weather</string>
    <string name="refresh">Refresh</string>
    <string name="setting">Setting</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="type_of_weather">Type of weather</string>
    <string name="partly_cloudy_n24c_31c">Partly Cloudy\n24C - 31C</string>
    <string name="showers_n24c_30c">Showers\n24C - 30C</string>
    <string name="rain_n22c_23c">Rain\n22C - 23C</string>
    <string name="scattered_showers_n22c_27c">Scattered Showers\n22C - 27C</string>
    <string name="mostly_cloudy_n22c_30c">Mostly Cloudy\n22C - 30C</string>
    <string name="thunderstorms_n25c_28c">Thunderstorms\n25C - 28C</string>
    <string name="scattered_thunderstorms_n24c_27c">Scattered Thunderstorms\n24C - 27C</string>
    <string name="showers_n24c_26c">Showers\n24C - 26C</string>
    <string name="scattered_thunderstorms_n23c_27c">Scattered Thunderstorms\n23C - 27C</string>
    <string name="_12c_n_cloudy">12C\nCloudy</string>
    <string name="_31c_n_sunny">31C\nSunny</string>
    <string name="paris" translatable="false">Paris</string>
    <string name="hanoi">Hanoi</string>
    <string name="toulouse" translatable="false">Toulouse</string>
    <string name="city_forecast">City Forecast</string>
    <string name="city_weather">City Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_music">Play Music!</string>
</resources>