<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForecastFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#3944BC">
        <TextView
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="start|center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/refresh"
            android:gravity="center"
            android:src="@drawable/refresh_button"
            android:background="#3944BC"
            app:tint="@android:color/white"/>
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/setting"
            android:gravity="center"
            android:src="@drawable/setting_button"
            android:background="#3944BC"
            app:tint="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#B9BFFF">
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:contentDescription="@string/type_of_weather"
            android:gravity="center"
            android:src="@drawable/day_partial_cloud"
            app:tint="#FF007F"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:gravity="center|start"
            android:text="@string/partly_cloudy_n24c_31c"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#B9BFFF">
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:contentDescription="@string/type_of_weather"
            android:gravity="center"
            android:src="@drawable/rain_thunder"
            app:tint="#FF007F"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:gravity="center|start"
            android:text="@string/showers_n24c_30c"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#B9BFFF">
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:contentDescription="@string/type_of_weather"
            android:gravity="center"
            android:src="@drawable/rain"
            app:tint="#FF007F"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:gravity="center|start"
            android:text="@string/rain_n22c_23c"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#B9BFFF">
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:contentDescription="@string/type_of_weather"
            android:gravity="center"
            android:src="@drawable/rain_thunder"
            app:tint="#FF007F"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:gravity="center|start"
            android:text="@string/scattered_showers_n22c_27c"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#B9BFFF">
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:contentDescription="@string/type_of_weather"
            android:gravity="center"
            android:src="@drawable/cloudy"
            app:tint="#FF007F"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:gravity="center|start"
            android:text="@string/mostly_cloudy_n22c_30c"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#B9BFFF">
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:contentDescription="@string/type_of_weather"
            android:gravity="center"
            android:src="@drawable/day_partial_cloud"
            app:tint="#FF007F"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:gravity="center|start"
            android:text="@string/partly_cloudy_n24c_31c"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#B9BFFF">
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/Sun"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:contentDescription="@string/type_of_weather"
            android:gravity="center"
            android:src="@drawable/thunder"
            app:tint="#FF007F"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:gravity="center|start"
            android:text="@string/thunderstorms_n25c_28c"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#B9BFFF">
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:contentDescription="@string/type_of_weather"
            android:gravity="center"
            android:src="@drawable/thunder"
            app:tint="#FF007F"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:gravity="center|start"
            android:text="@string/scattered_thunderstorms_n24c_27c"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#B9BFFF">
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:contentDescription="@string/type_of_weather"
            android:gravity="center"
            android:src="@drawable/rain_thunder"
            app:tint="#FF007F"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:gravity="center|start"
            android:text="@string/showers_n24c_26c"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#B9BFFF">
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:contentDescription="@string/type_of_weather"
            android:gravity="center"
            android:src="@drawable/thunder"
            app:tint="#FF007F"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:gravity="center|start"
            android:text="@string/scattered_thunderstorms_n23c_27c"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#B9BFFF"/>
</LinearLayout>