<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherAndForecastFragmentTwo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20sp"
        android:background="@color/weather_background">

        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/_12c_n_cloudy"
            android:textSize="20sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:text="@string/toulouse"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/angry_clouds"
            app:tint="@color/header" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/forecast_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/mon"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/type_of_weather"
                    android:gravity="center"
                    android:src="@drawable/day_partial_cloud"
                    app:tint="@color/forecast_weather" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center|start"
                    android:text="@string/partly_cloudy_n24c_31c"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/forecast_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/tue"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/type_of_weather"
                    android:gravity="center"
                    android:src="@drawable/rain_thunder"
                    app:tint="@color/forecast_weather" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center|start"
                    android:text="@string/showers_n24c_30c"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/forecast_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/wed"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/type_of_weather"
                    android:gravity="center"
                    android:src="@drawable/rain"
                    app:tint="@color/forecast_weather" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center|start"
                    android:text="@string/rain_n22c_23c"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/forecast_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/thu"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/type_of_weather"
                    android:gravity="center"
                    android:src="@drawable/rain_thunder"
                    app:tint="@color/forecast_weather" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center|start"
                    android:text="@string/scattered_showers_n22c_27c"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/forecast_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/fri"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/type_of_weather"
                    android:gravity="center"
                    android:src="@drawable/cloudy"
                    app:tint="@color/forecast_weather" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center|start"
                    android:text="@string/mostly_cloudy_n22c_30c"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/forecast_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/sat"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/type_of_weather"
                    android:gravity="center"
                    android:src="@drawable/day_partial_cloud"
                    app:tint="@color/forecast_weather" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center|start"
                    android:text="@string/partly_cloudy_n24c_31c"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/forecast_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/Sun"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/type_of_weather"
                    android:gravity="center"
                    android:src="@drawable/thunder"
                    app:tint="@color/forecast_weather" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center|start"
                    android:text="@string/thunderstorms_n25c_28c"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/forecast_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/mon"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/type_of_weather"
                    android:gravity="center"
                    android:src="@drawable/thunder"
                    app:tint="@color/forecast_weather" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center|start"
                    android:text="@string/scattered_thunderstorms_n24c_27c"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/forecast_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/tue"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/type_of_weather"
                    android:gravity="center"
                    android:src="@drawable/rain_thunder"
                    app:tint="@color/forecast_weather" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center|start"
                    android:text="@string/showers_n24c_26c"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/forecast_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/wed"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/type_of_weather"
                    android:gravity="center"
                    android:src="@drawable/thunder"
                    app:tint="@color/forecast_weather" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center|start"
                    android:text="@string/scattered_thunderstorms_n23c_27c"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>