<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:background="#E6FDF5">

        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/_12c_n_cloudy"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/paris"
            android:gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/angry_clouds"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            app:tint="#3944BC"/>
    </RelativeLayout>
</LinearLayout>